# practica-dms-2021-2022

./: README.md
components/dms2122backend/: README.md  install.sh  setup.cfg
components/dms2122backend/dms2122backend/data/config/: __init__.py  backendconfiguration.py
components/dms2122backend/dms2122backend/data/db/: __init__.py  schema.py
components/dms2122backend/dms2122backend/data/db/exc/: __init__.py  questionnotfounderror.py  questionorusernotfounderror.py  qustionexistserror.py  usernotfounderror.py
components/dms2122backend/dms2122backend/data/db/results/: __init__.py  answer.py  question.py
components/dms2122backend/dms2122backend/data/db/resultsets/: __init__.py  answers.py  questions.py
components/dms2122backend/dms2122backend/data/rest/: __init__.py  authservice.py
components/dms2122backend/dms2122backend/logic/: __init__.py  answerlogic.py  questionlogic.py  statslogic.py
components/dms2122backend/dms2122backend/logic/exc/: __init__.py  forbiddenoperationerror.py
components/dms2122backend/dms2122backend/openapi/: spec.yml
components/dms2122backend/dms2122backend/presentation/rest/: answer.py  question.py  security.py  server.py  stats.py
components/dms2122backend/dms2122backend/service/: __init__.py  answerservices.py  questionservices.py  statsservices.py
components/dms2122frontend/: README.md
components/dms2122frontend/dms2122frontend/static/: style.css
components/dms2122frontend/dms2122frontend/templates/: admin.html  base.html  student.html  teacher.html
(+26 files in other folders)
