[metadata]
name = dms2122backend
version = attr: dms2122backend.VERSION
description = DMS 2021-2022 backend service
long_description = file: README.md
keywords = dms, ubu, backend, service
license = MIT License

[options]
packages = find:
zip_safe = False
include_package_data = True
scripts =
    bin/dms2122backend
    bin/dms2122backend-create-questions
install_requires = sqlalchemy; jinja2<3.0; pyyaml<6.0; requests; connexion[swagger-ui]; dms2122common
